bindings/php/src/datalogic-ffi.h

typedef struct datalogic_traced_session datalogic_traced_session;
typedef struct datalogic_error datalogic_error;
/* Enum in datalogic.h; int-backed there, int32_t here (ABI-identical). */
typedef int32_t datalogic_status;
/* Owned byte buffer; release via datalogic_buf_free (by value). */
typedef struct {
    uint8_t *ptr;
    size_t len;
    size_t cap;
} datalogic_buf;
const char *datalogic_version(void);
void datalogic_buf_free(datalogic_buf buf);
/* --- Errors (owned handles; accessors borrow until _free) --- */
void datalogic_error_free(datalogic_error *err);
datalogic_status datalogic_error_status(const datalogic_error *err);
const uint8_t *datalogic_error_message(const datalogic_error *err, size_t *len_out);
const uint8_t *datalogic_error_tag(const datalogic_error *err, size_t *len_out);
const uint8_t *datalogic_error_operator(const datalogic_error *err, size_t *len_out);
const uint8_t *datalogic_error_path_json(const datalogic_error *err, size_t *len_out);
datalogic_status datalogic_traced_session_evaluate(const datalogic_traced_session *session,
                                                   const char *rule_json,
                                                   size_t rule_len,
                                                   const char *data_json,
                                                   size_t data_len,
                                                   datalogic_buf *out,
                                                   datalogic_error **err);