bindings/dotnet/src/Datalogic/Native/NativeMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "datalogic_traced_session_evaluate")]
    internal static unsafe partial DatalogicStatus datalogic_traced_session_evaluate(
        IntPtr session,
        byte* rule_json,
        nuint rule_len,
        byte* data_json,
        nuint data_len,
        out DatalogicBuf @out,
        ref IntPtr err);

    // =============== Error handles ===============

    [LibraryImport(LibraryName, EntryPoint = "datalogic_error_free")]
    internal static partial void datalogic_error_free(IntPtr err);

    [LibraryImport(LibraryName, EntryPoint = "datalogic_error_status")]
    internal static partial DatalogicStatus datalogic_error_status(IntPtr err);

    [LibraryImport(LibraryName, EntryPoint = "datalogic_error_message")]
    internal static unsafe partial byte* datalogic_error_message(IntPtr err, out nuint len_out);

    [LibraryImport(LibraryName, EntryPoint = "datalogic_error_tag")]
    internal static unsafe partial byte* datalogic_error_tag(IntPtr err, out nuint len_out);

    [LibraryImport(LibraryName, EntryPoint = "datalogic_error_operator")]
    internal static unsafe partial byte* datalogic_error_operator(IntPtr err, out nuint len_out);

    [LibraryImport(LibraryName, EntryPoint = "datalogic_error_path_json")]
    internal static unsafe partial byte* datalogic_error_path_json(IntPtr err, out nuint len_out);

    // =============== Managed helpers ===============

    /// <summary>
    /// Copy an owned <see cref="DatalogicBuf"/> into a managed string
    /// and release it via <see cref="datalogic_buf_free"/> (by value).
    /// Only call with a buf a native call actually filled (status Ok).
    /// </summary>
    internal static unsafe string TakeBufUtf8(DatalogicBuf buf)
    {
        try
        {
            return buf.Ptr == null || buf.Len == 0
                ? string.Empty
                : Encoding.UTF8.GetString(buf.Ptr, checked((int)buf.Len));
        }
        finally
        {
            datalogic_buf_free(buf);
        }
    }

    /// <summary>
    /// Copy borrowed (ptr, len) bytes into a managed string. The caller
    /// must do this before the next call touching the owning session.
    /// </summary>
    internal static unsafe string BorrowedUtf8(byte* ptr, nuint len)
        => ptr == null || len == 0 ? string.Empty : Encoding.UTF8.GetString(ptr, checked((int)len));

    /// <summary>
    /// Marshal a borrowed NUL-terminated UTF-8 C string (library-owned,
    /// never freed). Only used for `datalogic_version`, the one
    /// deliberate NUL-terminated survivor of the v2 contract.
    /// </summary>
    internal static string? BorrowUtf8String(IntPtr ptr)
        => ptr == IntPtr.Zero ? null : Marshal.PtrToStringUTF8(ptr);
}
